2008-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/InstantiatedType.cs: changed header.

2008-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/InstantiatedType.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Changed type
	instantiation.

2008-10-16  Andreia Gaita  <avidigal@novell.com>

	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: If the solution
	doesn't have a Configuration that matches the project's, add it.
	Fixes #435901

2008-10-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Add assembly key file to
	referenced files list.

2008-10-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Handle
	"Folder" item type. Fixes Bug 436656 - empty folder disappears after
	close/reopen solution.

2008-10-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom/SearchTypeRequest.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Worked on dom.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilEvent.cs: Load event's return type 
	  from the assembly. Fixes Bug 436315 - ReturnType of IEvents is null.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/AbstractMember.cs: fixed accessible issue.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Worked on dom & implement interfaces.
